--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@babel/runtime": "^7.17.0",
     "@coinbase/wallet-sdk": "^3.3.0",
+    "@ethersproject/abstract-provider": "5.7.0",
     "@fontsource/ibm-plex-mono": "^4.5.1",
     "@fontsource/inter": "^4.5.1",
     "@popperjs/core": "^2.4.4",
