--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
   "files": [
     "dist"
   ],
+  "private": false,
   "types": "dist/index.d.ts",
   "main": "dist/cjs/index.cjs",
   "module": "dist/index.js",
@@ -31,9 +32,9 @@
   "scripts": {
     "prei18n:extract": "touch src/locales/en-US.po",
     "i18n:extract": "lingui extract --locale en-US",
-    "i18n:compile": "yarn i18n:extract && lingui compile",
+    "i18n:compile": "pnpm i18n:extract && lingui compile",
     "i18n:pseudo": "lingui extract --locale pseudo && lingui compile",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "pnpm build",
     "start": "cosmos",
     "typecheck": "tsc -p tsconfig.json",
     "prebuild": "tsc -p tsconfig.build.json",
@@ -55,7 +56,7 @@
       "last 1 safari version"
     ]
   },
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.17.0",
     "@coinbase/wallet-sdk": "^3.3.0",
@@ -189,5 +190,6 @@
     "typescript": "4.8.3",
     "wcag-contrast": "^3.0.0",
     "webpack": "5.72.0"
-  }
+  },
+  "version": "0.0.2"
 }
