--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -191,5 +191,11 @@
     "wcag-contrast": "^3.0.0",
     "webpack": "5.72.0"
   },
-  "version": "0.0.2"
+  "version": "0.0.3",
+  "keywords": [
+    "web3-react",
+    "web3",
+    "widgets",
+    "react"
+  ]
 }
